# smb_android_cpp

./: .gitignore  build.gradle  lint.xml  settings.gradle
app/: build.gradle
smb/: CMakeLists.txt  build.gradle
smb/src/androidTest/java/com/example/smb/: ExampleInstrumentedTest.java
smb/src/main/: AndroidManifest.xml
smb/src/main/cpp/base/: Callback.h
smb/src/main/cpp/credential_cache/: CredentialCache.cc  CredentialCache.h
smb/src/main/cpp/includes/samba_include/: credentials.h  dcerpc.h  domain_credentials.h  lookup_sid.h  ndr.h  passdb.h  rpc_common.h  smb2_lease_struct.h
smb/src/main/cpp/jni_helper/: JavaClassCache.cc  JavaClassCache.h  JniCallback.h  JniHelper.cc  JniHelper.h
smb/src/main/cpp/logger/: logger.h
smb/src/main/cpp/samba_client/: SambaClient.cc  SambaClient.h
smb/src/main/java/com/example/smb/: MainActivity.java  SambaConfiguration.java  SambaProviderApplication.java  ShareManager.java  TaskManager.java
smb/src/main/java/com/example/smb/auth/: AuthActivity.java  AuthorizationTask.java
smb/src/main/java/com/example/smb/base/: AuthFailedException.java  BiResultTask.java  DirectoryEntry.java  DocumentCursor.java  DocumentIdHelper.java  OnTaskFinishedCallback.java
smb/src/main/java/com/example/smb/browsing/: BrowsingException.java  MasterBrowsingProvider.java  NetworkBrowser.java  NetworkBrowsingProvider.java
smb/src/main/res/drawable/: ic_server.xml  ic_shared.xml
smb/src/main/res/layout/: activity_main.xml
smb/src/main/res/values/: dimens.xml  strings.xml
smb/src/test/java/com/example/smb/: ExampleUnitTest.java
(+68 files in other folders)
